# cli-table

./: .gitignore  CMakeLists.txt  README.md  build.sh
demo/: colors.sh  old_glory.sh  spreadsheet.sh
src/: CMakeLists.txt  main.cpp  table.cpp  table.hpp
src/inc/: boxchars.hpp  table.cpp  table.hpp
src/inc/table/: cell.cpp  cell.hpp
src/table/: boxchars.hpp  table.cpp
src/test/: test_table.cpp
